fixed the background to match demo, no white spaces

--- a/styles.css
+++ b/styles.css
@@ -30,13 +30,14 @@ h1 {
     width: 800px;
     margin: 0 auto;
     border: 4px solid gray;
-    background-color: white;
     overflow: hidden;
+    background-image: url('background.png');
 }
 
 #reviews {
     width: 550px;
     float: left;
+    background-image: url('background.png');
 }
 
 #rating {
